Fix nav items on mobile navbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,11 @@ button {}
 .signin {
     background-color: transparent !important;
     color: #4596EA !important;
+    outline: 1px solid #4596EA !important;
+}
+.contact{
+    background-color: transparent !important;
+    color: #4596EA !important;
     outline: solid 1px;
 }
 
